For 1.19.7:
	- Classic VRML parser routing work.

	- fixed (linux) snapshot arguments in CFrontEnd/fwopts.c 

	- EXTERNPROTOS should be working in "classic" VRML Parser

	- PROTO IS fields now can be nested, and now work properly with SCRIPTS 

	- use GL_ARB_occlusion_query for visibility culling, and VisibilitySensors.
	  Computers that do not have GL_ARB_occlusion_query will not have a 
	  functioning VisibilitySensor.

	- Mipmap textures (PixelTexture and ImageTexture only)

For 1.19.6:
	- MidiControl - work on event routing of values (Strings changed, etc).

	- Javascript - more work on efficiency of eventIn/Outs.

	- Text node work.

	- bug on command-line execution on OS X fixed.


For 1.19.5:
	- more plugin work on Linux and OS X.

	- VRML Parsing - reduce strictness to allow Lightwave VRML output to load.
	  (see comments in CFuncs/CParseLexer.c)

	- Javascript MFString routing - concatenate FreeWRL's MFString nodes to the length that
	  a Javascript MFString eventOut specifies.

	- JAVA EAI/SAI - callbacks expanded to allow for all VRML/X3D data types.

For 1.19.4:
	- Compile changes to allow rpms to be built and distributed for Fedora Core 6;

	- AMD64 browser plugin now compiled by default;

	- Plugin code changed to better locate initial URL;

	- OS X Console work, and plugin work to better handle multiple invocations of FreeWRL.

	- XML parser has had a bit of Javascript coding changes. More required, for non-CDATA
	  script text.

	- Classic parser now looks to see if a Javascript URL is a file name - if it is, it loads the file.

	- Javascript functions that returned strings, were not concatable. This
	  was caused by returning a trailing NULL character (as is usually the case with C strings).
	  This NULL was removed, and eg: print ('the ' + getName() + ' Browser works now');

For 1.19.3:
	- OS X - console messages improved.

	- Makefile.PL - .rpm and .deb package makes updated.

	- add Seamonkey and Firefox as possible browsers in Makefile.PL
