@@ -1,4 +1,8 @@
 For 1.19.7:
+	- work on mouse-sensitive nodes; when they are disabled, mouse does not
+	  change shape, and nodes are ignored. Works dynamically; scene graph
+	  is pruned when sensitive nodes become disabled.
+
 	- Classic VRML parser routing work.
 
 	- fixed (linux) snapshot arguments in CFrontEnd/fwopts.c 
